Paper's Fig 1 supplied by JP Reilly

--- a/readme.html
+++ b/readme.html
@@ -1,5 +1,6 @@
-readme.html for ModelDB entry of NEURON model used in<br>
-Reilly, J.P. Survey of numerical electrostimulation models. Physics in Medicine and Biology 61:4346-4363, 2016. PMID 27223870<p></p>
+<html>
+readme.html for ModelDB entry of NEURON model used in<p/>
+Reilly, J.P. Survey of numerical electrostimulation models. Physics in Medicine and Biology 61:4346-4363, 2016.(see (*) at far bottom for errata) PMID 27223870<p></p>
 
 <strong>Developer:</strong> N.T. Carnevale, Neuroscience Department, Yale Medical School, New Haven, CT.<p></p>
 
@@ -123,3 +124,6 @@ Frankenhaeuser, B. and Huxley, A.F.. J. Physiol. 171:302-15, 1964.<br>
 Hines, M. and Shrager, P.. J. Restorative Neurology and Neuroscience 3:81-93, 1991.<br>
 McNeal, D.R.. IEEE Trans. Biomed. Eng. 23:329-337, 1976.<br>
 Reilly, J.P. and Diamant, A.. Electrostimulation: Theory, Applications, and Computational Model. Artech House, 2011.<p></p>
+<strong>(*) The publisher did not include the correct figure 1 in the paper (it duplicated figure 2). Figure 1 (supplied by JP Reilly) is:</strong>
+  <img src="./Fig1.png" alt="Fig 1">
+  </html>
